La wiki dice qué se le puede agregar al emulador y cómo, con un ejemplo que probé
Extending-OOZX contaba cómo escribir un dispositivo cuando escribir un dispositivo era editar
dos archivos de servicio a mano y agregar un binding en Machines. Nada de eso es así.

Ahora lista las nueve vías de entrada que hay -Extension, Equipment, DeskEquipment,
ScreenEffect, Scaler, SnapshotFile, StartsAMachineOn, RomsOfItsOwn y BesideTheGame- con qué
deja agregar cada una, y explica el mecanismo: una interface marcada @Plugin, el procesador
que escribe el papelerío al compilar, una carpeta, un loader.

El ejemplo es de una clase y lo corrí antes de escribirlo: compilado contra el jar que se
envía, empaquetado y puesto en ~/.oozx/plugins, el emulador lo encuentra y aparece entre los
efectos. La primera versión de las instrucciones estaba mal -el procesador no viaja adentro
del jar del emulador, así que el service file no se generaba-; ahora dicen los dos caminos que
de verdad funcionan, con el procesador al lado o escribiendo esa línea a mano.

Como el autor de un plugin necesita ese jar de ocho kilobytes, el workflow publica ahora
plugin-api y plugin-processor como releases, al lado de las placas.

Y se corrigen las páginas que quedaron mintiendo: la de máquinas decía veinticuatro modelos
sin decir que el build trae uno, ULAplus figuraba como parte del kit, y devices-all decía
depender de veinticuatro jars.